check sign alignment issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -460,10 +460,10 @@ h5 {
 
 
 /* benefits section start */
-.benefits-section {
+/* .benefits-section {
     background-color: #ffffff;
     padding: 80px 0;
-}
+} */
 
 .benefit-card {
     padding: 30px;
